:sparkles: feat: -- add layout desktop -- add skeleton Profile card -- add Game Card styles

--- a/src/style.less
+++ b/src/style.less
@@ -2,7 +2,7 @@
 
 :root {
   color: @text;
-  background-color: @background;
+  .background();
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
