--- a/src/variables.less
+++ b/src/variables.less
@@ -1,5 +1,4 @@
 @text: #ebe9fc;
-@background: #010104;
 @primary: #7631d8;
 @secondary: #140024;
 @accent: #5000c2;
@@ -24,10 +23,30 @@
     }
 }
 
+.background {
+    background: rgb(80, 0, 194);
+    background: -moz-radial-gradient(circle, rgba(80, 0, 194, 1) 0%, rgba(20, 0, 36, 1) 100%);
+    background: -webkit-radial-gradient(circle, rgba(80, 0, 194, 1) 0%, rgba(20, 0, 36, 1) 100%);
+    background: radial-gradient(circle, rgba(80, 0, 194, 1) 0%, rgba(20, 0, 36, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#5000c2", endColorstr="#140024", GradientType=1);
+}
+
 .background_glass {
-    background-color: rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(10px);
-    box-shadow: 0px 3px 3px 0px @text;
+    background: rgba(20, 0, 36, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+.backgroundCard_glass {
+    background: rgba(144, 19, 254, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 .format_description {
@@ -49,5 +68,5 @@
     font-family: @font_title;
     font-weight: bolder;
     letter-spacing: 1px;
-    .clamp-font(24px, 28px, 32px);
+    .clamp-font(24px, 28px, 29px);
 }
